# fetch-image

./: .env.exampes  .gitignore  Cargo.toml  LICENSE  README.md  links.md  progress.md
data/: links.json  relevant-json-elements.txt  test.json  www.instagram.com.json
data/json/: 1615818310-jesus.nr1.json  1615818312-chline_hutzu.json  1615818314-draindler.page.json  1615818315-mondhausi.json  1615818406-jesus.nr1.json  1615818408-chline_hutzu.json
scrape-posts/: package.json
src/: fetch.rs  main.rs  parse.rs
src/scrape/: main.rs
src/scrape2/: instagram.rs  main.rs
wwwroot/: index.js  instagram.js  package-lock.json  package.json  test.js
