[package]
name = "fetch-image"
version = "0.1.0"
authors = ["youngtrashbag"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# env vars
dotenv = "0.15"

# logging
log = "0.4"
env_logger = "0.8"

# http requests
reqwest = "0.11"

# telegram bot api/lib
