[package]
name = "fetch-image"
version = "0.1.0"
authors = ["youngtrashbag"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "scrape"
path = "src/scrape/main.rs"

[dependencies]
# env vars
dotenv = "0.15"

# logging
log = "0.4"
env_logger = "0.8"

# http requests
reqwest = { version = "0.11", features = ["blocking", "socks"] }

# de-serializing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# time
chrono = "0.4"

# telegram bot api/lib
